--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,8 @@
 :root {
-  --mainBrown: #6e6658;
-  --mainYellow: #cebc81;
-  --mainGrey: #ece8dc;
+  --mainRed: #45230f;
+  --mainYellow: #955f31;
+  --mainBlue: #3b555d;
+  --mainGray: #233237;
   --mainWhite: #fff;
   --mainDark: #000;
 }
@@ -19,9 +20,18 @@ h6 {
   font-family: "Courier New", Courier, monospace !important;
   letter-spacing: 0.25rem !important;
 }
-.text-yellow {
-  color: var(--mainYellow) !important;
+.text-dark {
+  color: var(--mainDark) !important;
 }
+
+.text-gray {
+  color: var(--mainGray);
+}
+
+.text-white {
+  color: #ffff;
+}
+
 .title {
   letter-spacing: 0.3rem;
   font-weight: 400;
@@ -31,12 +41,12 @@ h6 {
   color: var(--mainYellow);
   font-size: 2rem;
 }
-.btn-yellow {
-  color: var(--mainYellow) !important;
-  border-color: var(--mainYellow) !important;
+.btn-white {
+  color: var(--mainWhite) !important;
+  border-color: var(--mainWhite) !important;
 }
-.btn-yellow:hover {
-  background: var(--mainYellow) !important;
+.btn-white:hover {
+  background: var(--mainWhite) !important;
   color: var(--mainDark) !important;
 }
 .default-background {
@@ -60,10 +70,10 @@ h6 {
   background-attachment: fixed;
 }
 .menu {
-  background: var(--mainGrey);
+  background: var(--mainYellow);
 }
 .contact {
-  background: var(--mainGrey);
+  background: var(--mainBlue);
 }
 .footer {
   background: var(--mainDark);
