--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  background: var(--mainRed);
+  background-color: var(--mainWhite);
   color: var(--mainDark);
   font-family: "Bebas Neue", cursive;
 }
